[workspace]
members = ["cheats"]
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1"
arc-swap = "1"
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
crossbeam = "0.8"
flatbuffers = "23.5"
futures = "0.3"
futures-util = "0.3"
itoa = "1.0"
lazy_static = "1.4"
prost = "0.11"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = "0.3"
tokio = { version = "1.30", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
tracing-test = "0.2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
