[workspace]
members = ["cheats", "axumex", "socks5", "fullstack", "reset", "dag"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.6", features = ["headers"] }
arc-swap = "1"
async-trait = "0.1"
bytes = "1.5"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossbeam = "0.8"
flatbuffers = "23.5"
futures = "0.3"
futures-util = "0.3"
itoa = "1.0"
lazy_static = "1.4"
headers = "0.3"
prost = "0.12"
prost-types = "0.12"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = "0.3"
sqlx = { version = "0.7", features = [
    "macros",
    "sqlite",
    "runtime-tokio-rustls",
] }
once_cell = "1.18"
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
tokio = { version = "1.32", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"
uuid = { version = "1.4", features = ["v4", "fast-rng"] }
proc-macro2 = "1.0.66"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
