[workspace]
members = ["axumex", "cheats", "dag", "fullstack", "reset", "socks5", "socks5v2"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1"
arc-swap = "1"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.6", features = ["headers"] }
bytes = "1.5"
chrono = "0.4"
clap = { version = "4", features = ["color", "derive"] }
crossbeam = "0.8"
flatbuffers = "23.5"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
headers = "0.3"
itoa = "1.0"
lazy_static = "1.4"
once_cell = "1.18"
proc-macro2 = "1.0.66"
prost = "0.12"
prost-types = "0.12"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
sea-orm = { version = "0.12", features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["macros", "runtime-tokio-rustls", "sqlite"] }
thiserror = "1"
time = "0.3"
tokio = { version = "1.32", features = ["full"] }
tokio-stream = "0.1"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"
uuid = { version = "1.4", features = ["fast-rng", "v4"] }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false
