[package]
edition.workspace = true
name = "actionnote"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
rand = "0.8"
regex = "1.10"
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
serde_json.workspace = true