[package]
name = "axumex"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
async-stream = "0.3"
async-trait.workspace = true
axum = { workspace = true, features = ["headers"] }
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
headers.workspace = true
tokio-stream.workspace = true
tower-http = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
sqlx = { workspace = true, features = [
    "macros",
    "sqlite",
    "runtime-tokio-rustls",
] }
once_cell.workspace = true
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
