[package]
edition.workspace = true
name = "axumex"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["headers"] }
chrono.workspace = true
futures.workspace = true
headers.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
reqwest = { workspace = true, features = ["json"] }
sea-orm = { workspace = true, features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["macros", "runtime-tokio-rustls", "sqlite"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tower-http = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["fast-rng", "v4"] }
