[package]
edition = "2021"
name = "cheats"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["derive"] }
crossbeam.workspace = true
flatbuffers.workspace = true
futures-util.workspace = true
futures.workspace = true
itoa.workspace = true
lazy_static.workspace = true
prost.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing-subscriber.workspace = true
tracing-test.workspace = true
tracing.workspace = true
