[package]
name = "fullstack"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["headers"] }
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
headers.workspace = true
tokio-stream.workspace = true
tower-http = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
prost.workspace = true
prost-types.workspace = true


[build-dependencies]
prost-build = { version = "0.11", features = ["format"] }
