[package]
edition.workspace = true
name = "fullstack"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["headers"] }
chrono.workspace = true
futures.workspace = true
headers.workspace = true
prost-types.workspace = true
prost.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tower-http = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
tracing.workspace = true

[build-dependencies]
prost-build = { version = "0.12", features = ["format"] }
