[package]
edition.workspace = true
name = "majora"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
clap = { workspace = true, features = ["derive"] }
futures-core.workspace = true
futures-util.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
