[package]
edition.workspace = true
name = "reset"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
plist = "1.5.0"
tracing-subscriber.workspace = true
tracing.workspace = true
