[package]
edition.workspace = true
name = "socks5v2"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
clap = { workspace = true, features = ["color", "derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
futures-util = "0.3"
futures-core = "0.3"