[package]
edition.workspace = true
name = "socks5v2"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
clap = { workspace = true, features = ["color", "derive"] }
futures-core.workspace = true
futures-util.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
