[package]
edition.workspace = true
name = "thumbor"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum-extra = { workspace = true, features = ["typed-header"] }
axum.workspace = true
base64 = "0.21"
bytes.workspace = true
image = "0.24"
lazy_static.workspace = true
lru = "0.12"
metrics-exporter-prometheus.workspace = true
percent-encoding = "2.3"
photon-rs = "0.3"
prost-types.workspace = true
prost.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
tracing.workspace = true

[build-dependencies]
prost-build = "0.12" # 编译 protobuf
